fixed misspelling, resized logos, added updated about me

--- a/index.html
+++ b/index.html
@@ -94,16 +94,23 @@
         </div>
         <div data-aos="fade-up">
           <br>
-          <h2>About Me</h2>I am Full Stack Developer with a passion for learning new technologies. I also have experience with HTML5, CSS3, JavaScript(ES5,6), React, jQuery, Node.js, PHP, MySQL, PostgreSQL, AWS(EC2, S3).
+          <h2>About Me</h2>
+          I am a Full Stack Web Developer with a passion for learning new technologies and creating. I developed an interest in
+          coding early on in life because I was really interested in computer games such as StarCraft: Brood War and WarCraft III:
+          Frozen Throne. I am really knowledgeable on the hardware side of things because I was constantly tinkering with my
+          computer. I wanted to bridge the gap to understand things on the software side so that’s when I decided to attend a
+          coding bootcamp.
           <br>
           <br>
-          I also earned a Bachelor of
-          Science degree in Business Administration with concentration in Economics and Statistics from CSULA. To stay current
-          with the latest trends in marketing, I have completed several professional development courses in content marketing, analytics
-          and AI strategy analytics.
+          I attended LearningFuze where I learned how to code in HTML5, CSS3, JavaScript(ES5,6), React, jQuery, Node.js, MySQL,
+          PostgreSQL, AWS(EC2, S3). I practiced coding under a senior developer for an average of 70+ hours a week for 3 months. I
+          practiced how to solve problems logically with Javascript and artistically create things with CSS3. I created web
+          applications in a coding environment and developed the understanding of coding culture.
           <br>
           <br>
-          My academic and professional development background and work experience positions me well for roles in Web Development and Software Engineering.
+          I also earned a Bachelor of Science degree in Business Administration with concentration in Economics and Statistics
+          from CSULA. To stay current with the latest trends in marketing, I have completed several professional development
+          courses in content marketing, analytics and AI strategy analytics.
         </div>
       </div>
 
@@ -175,47 +182,65 @@
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
                 <h4>JavaScript</h4>
-                <img src="assets/img/icons8-javascript.svg">
+                <div class="center">
+                  <img src="assets/img/icons8-javascript.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
                 <h4>CSS</h4>
-                <img src="assets/img/icons8-css3.svg">
+                <div class="center">
+                <img src="assets/img/icons8-css3.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
                 <h4>React</h4>
-                <img src="assets/img/icons8-react-native.svg">
+                <div class="center">
+                <img src="assets/img/icons8-react-native.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
                 <h4>HTML</h4>
-                <img src="assets/img/icons8-html-5.svg">
+                <div class="center">
+                <img src="assets/img/icons8-html-5.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
-                <h4>Node</h4>
-                <img src="assets/img/icons8-nodejs.svg">
+                <h4>Node.js</h4>
+                <div class="center">
+                <img src="assets/img/icons8-nodejs.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Express</h4>
-                <img src="assets/img/express-js-seeklogo.com.svg" height="240px" width="240px">
+                <h4>Express.js</h4>
+                <div class="center">
+                <img src="assets/img/express-js-seeklogo.com.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>MySQL</h4>
-                <img src="assets/img/mysql-seeklogo.com.svg" height="220px" width="220px">
+                <div class="center">
+                <img src="assets/img/mysql-seeklogo.com.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Postgresql</h4>
-                <img src="assets/img/icons8-postgresql.svg">
+                <h4>PostgreSQL</h4>
+                <div class="center">
+                <img src="assets/img/icons8-postgresql.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>jQuery</h4>
-                <img src="assets/img/jquery-seeklogo.com.svg" height="240px" width="240px">
+                <div class="center">
+                <img src="assets/img/jquery-seeklogo.com.svg" height="100px" width="100px">
+                </div>
               </div>
             </div>
 
@@ -233,50 +258,67 @@
           <div class="container">
 
             <div class="row no-gutters">
-
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
-                <h4>Github</h4>
-                <img src="assets/img/icons8-github.svg">
+                <h4>GitHub</h4>
+                <div class="center">
+                <img src="assets/img/icons8-github.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
                 <h4>Git</h4>
-                <img src="assets/img/icons8-git.svg">
+                <div class="center">
+                <img src="assets/img/icons8-git.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
                 <h4>VS Code</h4>
-                <img src="assets/img/icons8-visual-studio-code-2019.svg">
+                <div class="center">
+                <img src="assets/img/icons8-visual-studio-code-2019.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
-                <h4>Meister Task</h4>
-                <img src="assets/img/meistertask.png" height="200px" width="200px">
+                <h4>MeisterTask</h4>
+                <div class="center">
+                <img src="assets/img/meistertask.png" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
                 <h4>npm</h4>
-                <img src="assets/img/icons8-npm.svg">
+                <div class="center">
+                <img src="assets/img/icons8-npm.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Chrome Dev Tools</h4>
-                <img src="assets/img/chromedev.svg" height="240px" width="240px">
+                <div class="center">
+                <img src="assets/img/chromedev.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Amazon Web Services</h4>
-                <img src="assets/img/icons8-amazon-s3.svg">
+                <h4>AWS</h4>
+                <div class="center">
+                <img src="assets/img/icons8-amazon-s3.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>NGINX</h4>
-                <img src="assets/img/icons8-nginx.svg">
+                <div class="center">
+                <img src="assets/img/icons8-nginx.svg" height="100px" width="100px">
+                </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Figma</h4>
-                <img src="assets/img/Figma-logo.svg" height="200px" width="200px">
+                <div class="center">
+                <img src="assets/img/Figma-logo.svg"  height="100px" width="100px">
+                </div>
               </div>
             </div>
 
