--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
               <h4>Title</h4>
               <p>Full Stack Web Developer</p>
               <h4>Email</h4>
-              <p>jerryong89@gmail.com</p>
+              <a href="mailto:jerryong89@gmail.com"><p>jerryong89@gmail.com</p></a>
               <h4>Phone</h4>
-              <p>(323) 527-5268</p>
+              <a href="tel:+13235275268"><p>(323) 527-5268</p></a>
               <h4>GitHub</h4>
               <a href="https://github.com/jerryong89"><p>https://github.com/jerryong89</p></a>
               <h4>Linkedin</h4>
@@ -389,7 +389,6 @@
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <!-- <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <!-- <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script> -->
   <!-- <script src="assets/vendor/venobox/venobox.min.js"></script> -->
