--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <h4>Title</h4>
               <p>Full Stack Web Developer</p>
               <h4>Email</h4>
-              <a href="mailto:jerryong89@gmail.com"><p>jerryong89@gmail.com</p></a>
+              <a href="mailto:jerryong89@gmail.com"></a><p>jerryong89@gmail.com</p>
               <h4>Phone</h4>
               <a href="tel:+13235275268"><p>(323) 527-5268</p></a>
               <h4>GitHub</h4>
@@ -218,7 +218,7 @@
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Express.js</h4>
                 <div class="center">
-                <img src="assets/img/express-js-seeklogo.com.svg" height="100px" width="100px">
+                <img src="assets/img/express-js-seeklogo.com.svg" height="100px" width="150px">
                 </div>
               </div>
 
@@ -239,7 +239,7 @@
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>jQuery</h4>
                 <div class="center">
-                <img src="assets/img/jquery-seeklogo.com.svg" height="100px" width="100px">
+                <img src="assets/img/jquery-seeklogo.com.svg" height="100px" width="150px">
                 </div>
               </div>
             </div>
@@ -387,11 +387,11 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <!-- <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <!-- <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script> -->
-  <!-- <script src="assets/vendor/venobox/venobox.min.js"></script> -->
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
 
   <!-- Template Main JS File -->
