--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
       <h1>Jerry Ong</h1>
-      <h2>Full-Stack Web Developer</h2>
+      <h2>Web Developer</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -80,9 +80,9 @@
               <h4>Name</h4>
               <p>Jerry Ong</p>
               <h4>Title</h4>
-              <p>Full Stack Web Developer</p>
+              <p>Web Developer</p>
               <h4>Email</h4>
-              <a href="mailto:jerryong89@gmail.com"></a><p>jerryong89@gmail.com</p>
+              <a href="mailto:jerryong89@gmail.com"><p>jerryong89@gmail.com</p></a>
               <h4>Phone</h4>
               <a href="tel:+13235275268"><p>(323) 527-5268</p></a>
               <h4>GitHub</h4>
@@ -95,16 +95,16 @@
         <div data-aos="fade-up">
           <br>
           <h2>About Me</h2>
-          I am a Full Stack Web Developer with a passion for learning new technologies and creating. I developed an interest in
+          I am a Web Developer with a passion for learning new technologies and creating. I developed an interest in
           coding early on in life because I was really interested in computer games such as StarCraft: Brood War and WarCraft III:
           Frozen Throne. I am really knowledgeable on the hardware side of things because I was constantly tinkering with my
           computer. I wanted to bridge the gap to understand things on the software side so that’s when I decided to attend a
           coding bootcamp.
           <br>
           <br>
-          I attended LearningFuze where I learned how to code in HTML5, CSS3, JavaScript(ES5,6), React, jQuery, Node.js, MySQL,
-          PostgreSQL, AWS(EC2, S3). I practiced coding under a senior developer for an average of 70+ hours a week for 3 months. I
-          practiced how to solve problems logically with Javascript and artistically create things with CSS3. I created web
+          I attended LearningFuze where I learned how to code in HTML5, CSS3, JavaScript (ES5,6), React, jQuery, Node.js, MySQL,
+          PostgreSQL, AWS (EC2, S3). I practiced coding under a senior developer for an average of 70+ hours a week for 3 months. I
+          practiced how to solve problems logically with JavaScript and artistically create things with CSS3. I created web
           applications in a coding environment and developed the understanding of coding culture.
           <br>
           <br>
@@ -188,7 +188,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
-                <h4>CSS</h4>
+                <h4>CSS3</h4>
                 <div class="center">
                 <img src="assets/img/icons8-css3.svg" height="100px" width="100px">
                 </div>
@@ -202,7 +202,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
-                <h4>HTML</h4>
+                <h4>HTML5</h4>
                 <div class="center">
                 <img src="assets/img/icons8-html-5.svg" height="100px" width="100px">
                 </div>
