added 3 more tools, fixed typos

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
-                <h4>CSS3</h4>
+                <h4>CSS</h4>
                 <div class="center">
                 <img src="assets/img/icons8-css3.svg" height="100px" width="100px">
                 </div>
@@ -202,7 +202,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
-                <h4>HTML5</h4>
+                <h4>HTML</h4>
                 <div class="center">
                 <img src="assets/img/icons8-html-5.svg" height="100px" width="100px">
                 </div>
@@ -318,6 +318,27 @@
                 <h4>Figma</h4>
                 <div class="center">
                 <img src="assets/img/Figma-logo.svg"  height="100px" width="100px">
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                <h4>Webpack</h4>
+                <div class="center">
+                  <img src="assets/img/icons8-amazon-s3.svg" height="100px" width="100px">
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                <h4>Babel</h4>
+                <div class="center">
+                  <img src="assets/img/icons8-nginx.svg" height="100px" width="100px">
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                <h4>Slack</h4>
+                <div class="center">
+                  <img src="assets/img/Figma-logo.svg" height="100px" width="100px">
                 </div>
               </div>
             </div>
