--- a/index.html
+++ b/index.html
@@ -324,21 +324,21 @@
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Webpack</h4>
                 <div class="center">
-                  <img src="assets/img/icons8-amazon-s3.svg" height="100px" width="100px">
+                  <img src="assets/img/webpack.svg" height="100px" width="100px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Babel</h4>
                 <div class="center">
-                  <img src="assets/img/icons8-nginx.svg" height="100px" width="100px">
+                  <img src="assets/img/babel.svg" height="100px" width="150px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Slack</h4>
                 <div class="center">
-                  <img src="assets/img/Figma-logo.svg" height="100px" width="100px">
+                  <img src="assets/img/slack.svg" height="100px" width="100px">
                 </div>
               </div>
             </div>
