--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
           <li><a href="#portfolio">Skills</a></li>
           <li><a href="#team">Tools</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="https://docs.google.com/document/d/1ij1jHo_l1aoOZlSWrJcMlUy8AGu5yTvx-1hHxKjWKWk/export?format=pdf" download>Resume</a></li>
+          <li><a
+              href="https://docs.google.com/document/d/1ij1jHo_l1aoOZlSWrJcMlUy8AGu5yTvx-1hHxKjWKWk/export?format=pdf"
+              download>Resume</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -81,13 +83,21 @@
               <h4>Title</h4>
               <p>Web Developer</p>
               <h4>Email</h4>
-              <a href="mailto:jerryong89@gmail.com"><p>jerryong89@gmail.com</p></a>
+              <a href="mailto:jerryong89@gmail.com">
+                <p>jerryong89@gmail.com</p>
+              </a>
               <h4>Phone</h4>
-              <a href="tel:+13235275268"><p>(323) 527-5268</p></a>
+              <a href="tel:+13235275268">
+                <p>(323) 527-5268</p>
+              </a>
               <h4>GitHub</h4>
-              <a href="https://github.com/jerryong89"><p>https://github.com/jerryong89</p></a>
+              <a href="https://github.com/jerryong89">
+                <p>https://github.com/jerryong89</p>
+              </a>
               <h4>Linkedin</h4>
-              <a href="https://www.linkedin.com/in/jerryong89/"><p>https://www.linkedin.com/in/jerryong89/</p></a>
+              <a href="https://www.linkedin.com/in/jerryong89/">
+                <p>https://www.linkedin.com/in/jerryong89/</p>
+              </a>
             </div>
           </div>
         </div>
@@ -95,20 +105,28 @@
           <br>
           <h2>About Me</h2>
           I am a Web Developer with a passion for learning new technologies and creating. I developed an interest in
-          coding early on in life because I was really interested in computer games such as StarCraft: Brood War and WarCraft III:
-          Frozen Throne. I am really knowledgeable on the hardware side of things because I was constantly tinkering with my
-          computer. I wanted to bridge the gap to understand things on the software side so that’s when I decided to attend a
+          coding early on in life because I was really interested in computer games such as StarCraft: Brood War and
+          WarCraft III:
+          Frozen Throne. I am really knowledgeable on the hardware side of things because I was constantly tinkering
+          with my
+          computer. I wanted to bridge the gap to understand things on the software side so that’s when I decided to
+          attend a
           coding bootcamp.
           <br>
           <br>
-          I attended LearningFuze where I learned how to code in HTML5, CSS3, JavaScript (ES5,6), React, jQuery, Node.js, MySQL,
-          PostgreSQL, AWS (EC2, S3). I practiced coding under a senior developer for an average of 70+ hours a week for 3 months. I
-          practiced how to solve problems logically with JavaScript and artistically create things with CSS3. I created web
+          I attended LearningFuze where I learned how to code in HTML5, CSS3, JavaScript (ES5,6), React, jQuery,
+          Node.js, MySQL,
+          PostgreSQL, AWS (EC2, S3). I practiced coding under a senior developer for an average of 70+ hours a week for
+          3 months. I
+          practiced how to solve problems logically with JavaScript and artistically create things with CSS3. I created
+          web
           applications in a coding environment and developed the understanding of coding culture.
           <br>
           <br>
-          I also earned a Bachelor of Science degree in Business Administration with concentration in Economics and Statistics
-          from CSULA. To stay current with the latest trends in marketing, I have completed several professional development
+          I also earned a Bachelor of Science degree in Business Administration with concentration in Economics and
+          Statistics
+          from CSULA. To stay current with the latest trends in marketing, I have completed several professional
+          development
           courses in content marketing, analytics and AI strategy analytics.
         </div>
       </div>
@@ -121,48 +139,39 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Projects</h2>
-
         </div>
 
         <div class="centering row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <a href="https://memory-match.jerry-ong.com">
-            <div class="icon-box icon-box-pink">
-              <img src="assets/img/memorymatch.png" heights="240px" width="200px">
-              <h4 class="title">MTG Memory Match</h4>
-              <p class="description">Magic The Gathering themed memory matching game</p>
-              </a>
-            </div>
-
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="100">
-            <a href="https://wicked-sales.jerry-ong.com">
-            <div class="icon-box icon-box-cyan">
-              <img src="assets/img/wickedsales.png" heights="240px" width="200px">
-              <h4 class="title">Wicked Sales</h4>
-
-              <p class="description">A basic CRUD webpage selling as seen on tv products</p>
-              </a>
-            </div>
-
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
-            data-aos-delay="200">
-            <a href="https://roommates.jerry-ong.com">
-            <div class="icon-box icon-box-green">
-              <img src="assets/img/roommates.png" heights="240px" width="200px">
-              <h4 class="title">Roommates</h4>
-              <p class="description">A web application that helps roommates share and organize space in their
-                refrigerator</p>
-                </a>
-            </div>
+              <div class="icon-box icon-box-pink">
+                <img src="assets/img/memorymatch.png" heights="240px" width="200px">
+                <h4 class="title">MTG Memory Match</h4>
+                <p class="description">Magic The Gathering themed memory matching game</p>
+            </a>
           </div>
 
         </div>
 
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
+          <a href="https://wicked-sales.jerry-ong.com">
+            <div class="icon-box icon-box-cyan">
+              <img src="assets/img/wickedsales.png" heights="240px" width="200px">
+              <h4 class="title">Wicked Sales</h4>
+              <p class="description">A basic CRUD webpage selling as seen on tv products</p>
+          </a>
+        </div>
+
+      </div>
+
+      <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
+        <a href="https://roommates.jerry-ong.com">
+          <div class="icon-box icon-box-green">
+            <img src="assets/img/roommates.png" heights="240px" width="200px">
+            <h4 class="title">Roommates</h4>
+            <p class="description">A web application that helps roommates share and organize space in theirrefrigerator
+            </p>
+        </a>
       </div>
     </section><!-- End Services Section -->
 
@@ -189,56 +198,56 @@
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
                 <h4>CSS</h4>
                 <div class="center">
-                <img src="assets/img/icons8-css3.svg" height="100px" width="100px">
+                  <img src="assets/img/icons8-css3.svg" height="100px" width="100px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
                 <h4>React</h4>
                 <div class="center">
-                <img src="assets/img/icons8-react-native.svg" height="100px" width="100px">
+                  <img src="assets/img/icons8-react-native.svg" height="100px" width="100px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
                 <h4>HTML</h4>
                 <div class="center">
-                <img src="assets/img/icons8-html-5.svg" height="100px" width="100px">
+                  <img src="assets/img/icons8-html-5.svg" height="100px" width="100px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
                 <h4>Node.js</h4>
                 <div class="center">
-                <img src="assets/img/icons8-nodejs.svg" height="100px" width="100px">
+                  <img src="assets/img/icons8-nodejs.svg" height="100px" width="100px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>Express.js</h4>
                 <div class="center">
-                <img src="assets/img/express-js-seeklogo.com.svg" height="100px" width="150px">
+                  <img src="assets/img/express-js-seeklogo.com.svg" height="100px" width="150px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>MySQL</h4>
                 <div class="center">
-                <img src="assets/img/mysql-seeklogo.com.svg" height="100px" width="100px">
+                  <img src="assets/img/mysql-seeklogo.com.svg" height="100px" width="100px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>PostgreSQL</h4>
                 <div class="center">
-                <img src="assets/img/icons8-postgresql.svg" height="100px" width="100px">
+                  <img src="assets/img/icons8-postgresql.svg" height="100px" width="100px">
                 </div>
               </div>
 
               <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
                 <h4>jQuery</h4>
                 <div class="center">
-                <img src="assets/img/jquery-seeklogo.com.svg" height="100px" width="150px">
+                  <img src="assets/img/jquery-seeklogo.com.svg" height="100px" width="150px">
                 </div>
               </div>
             </div>
@@ -253,97 +262,97 @@
             <div class="section-title" data-aos="fade-up">
               <h2>Tools</h2>
             </div>
-        <section id="steps" class="steps section-bg">
-          <div class="container">
+            <section id="steps" class="steps section-bg">
+              <div class="container">
 
-            <div class="row no-gutters">
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
-                <h4>GitHub</h4>
-                <div class="center">
-                <img src="assets/img/icons8-github.svg" height="100px" width="100px">
+                <div class="row no-gutters">
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in">
+                    <h4>GitHub</h4>
+                    <div class="center">
+                      <img src="assets/img/icons8-github.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
+                    <h4>Git</h4>
+                    <div class="center">
+                      <img src="assets/img/icons8-git.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
+                    <h4>VS Code</h4>
+                    <div class="center">
+                      <img src="assets/img/icons8-visual-studio-code-2019.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
+                    <h4>MeisterTask</h4>
+                    <div class="center">
+                      <img src="assets/img/meistertask.png" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
+                    <h4>npm</h4>
+                    <div class="center">
+                      <img src="assets/img/icons8-npm.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Chrome Dev Tools</h4>
+                    <div class="center">
+                      <img src="assets/img/chromedev.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>AWS</h4>
+                    <div class="center">
+                      <img src="assets/img/icons8-amazon-s3.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>NGINX</h4>
+                    <div class="center">
+                      <img src="assets/img/icons8-nginx.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Figma</h4>
+                    <div class="center">
+                      <img src="assets/img/Figma-logo.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Webpack</h4>
+                    <div class="center">
+                      <img src="assets/img/webpack.svg" height="100px" width="100px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Babel</h4>
+                    <div class="center">
+                      <img src="assets/img/babel.svg" height="100px" width="150px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Slack</h4>
+                    <div class="center">
+                      <img src="assets/img/slack.svg" height="100px" width="100px">
+                    </div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="100">
-                <h4>Git</h4>
-                <div class="center">
-                <img src="assets/img/icons8-git.svg" height="100px" width="100px">
-                </div>
               </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="200">
-                <h4>VS Code</h4>
-                <div class="center">
-                <img src="assets/img/icons8-visual-studio-code-2019.svg" height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="300">
-                <h4>MeisterTask</h4>
-                <div class="center">
-                <img src="assets/img/meistertask.png" height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="400">
-                <h4>npm</h4>
-                <div class="center">
-                <img src="assets/img/icons8-npm.svg" height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Chrome Dev Tools</h4>
-                <div class="center">
-                <img src="assets/img/chromedev.svg" height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>AWS</h4>
-                <div class="center">
-                <img src="assets/img/icons8-amazon-s3.svg" height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>NGINX</h4>
-                <div class="center">
-                <img src="assets/img/icons8-nginx.svg" height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Figma</h4>
-                <div class="center">
-                <img src="assets/img/Figma-logo.svg"  height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Webpack</h4>
-                <div class="center">
-                  <img src="assets/img/webpack.svg" height="100px" width="100px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Babel</h4>
-                <div class="center">
-                  <img src="assets/img/babel.svg" height="100px" width="150px">
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
-                <h4>Slack</h4>
-                <div class="center">
-                  <img src="assets/img/slack.svg" height="100px" width="100px">
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </section>
+            </section>
         </section><!-- End Team Section -->
 
         <!-- ======= Contact Section ======= -->
@@ -366,16 +375,18 @@
 
                   <div class="email mt-4">
                     <a href="mailto:jerryong89@gmail.com">
-                    <i class="icofont-envelope"></i>
-                    <h4>Email:</h4>
-                    <p>jerryong89@gmail.com</p></a>
+                      <i class="icofont-envelope"></i>
+                      <h4>Email:</h4>
+                      <p>jerryong89@gmail.com</p>
+                    </a>
                   </div>
 
                   <div class="phone mt-4">
                     <a href="tel:+13235275268">
-                    <i class="icofont-phone"></i>
-                    <h4>Call:</h4>
-                    <p>(323) 527-5268</p></a>
+                      <i class="icofont-phone"></i>
+                      <h4>Call:</h4>
+                      <p>(323) 527-5268</p>
+                    </a>
                   </div>
 
                 </div>
