added target=_blank to link to they open up in new tab

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 <p>(323) 527-5268</p>
               </a>
               <h4>GitHub</h4>
-              <a href="https://github.com/jerryong89">
+              <a href="https://github.com/jerryong89" target="_blank">
                 <p>https://github.com/jerryong89</p>
               </a>
               <h4>Linkedin</h4>
-              <a href="https://www.linkedin.com/in/jerryong89/">
+              <a href="https://www.linkedin.com/in/jerryong89/" target="_blank">
                 <p>https://www.linkedin.com/in/jerryong89/</p>
               </a>
             </div>
@@ -143,7 +143,7 @@
 
         <div class="centering row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
-            <a href="https://memory-match.jerry-ong.com">
+            <a href="https://memory-match.jerry-ong.com" target="_blank">
               <div class="icon-box icon-box-pink">
                 <img src="assets/img/memorymatch.png" heights="240px" width="200px">
                 <h4 class="title">MTG Memory Match</h4>
@@ -154,7 +154,7 @@
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://wicked-sales.jerry-ong.com">
+          <a href="https://wicked-sales.jerry-ong.com" target="_blank">
             <div class="icon-box icon-box-cyan">
               <img src="assets/img/wickedsales.png" heights="240px" width="200px">
               <h4 class="title">Wicked Sales</h4>
@@ -165,7 +165,7 @@
       </div>
 
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-        <a href="https://roommates.jerry-ong.com">
+        <a href="https://roommates.jerry-ong.com" target="_blank">
           <div class="icon-box icon-box-green">
             <img src="assets/img/roommates.png" heights="240px" width="200px">
             <h4 class="title">Roommates</h4>
