updated title and description in preview section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="icon-box icon-box-pink">
                 <img src="assets/img/memorymatch.png" heights="240px" width="200px">
                 <h4 class="title">MTG Memory Match</h4>
-                <p class="description">Magic The Gathering themed memory matching game</p>
+                <p class="description">Magic: The Gathering themed memory matching game</p>
             </a>
           </div>
 
@@ -157,8 +157,8 @@
           <a href="https://wicked-sales.jerry-ong.com" target="_blank">
             <div class="icon-box icon-box-cyan">
               <img src="assets/img/wickedsales.png" heights="240px" width="200px">
-              <h4 class="title">Wicked Sales</h4>
-              <p class="description">A basic CRUD webpage selling as seen on tv products</p>
+              <h4 class="title">Send It Sales</h4>
+              <p class="description">A mock-up CRUD webpage selling bouldering equipment</p>
           </a>
         </div>
 
