--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <li><a href="#team">Tools</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a
-              href="https://docs.google.com/document/d/1ij1jHo_l1aoOZlSWrJcMlUy8AGu5yTvx-1hHxKjWKWk/export?format=pdf"
-              download>Resume</a></li>
+              href="https://docs.google.com/document/d/1ij1jHo_l1aoOZlSWrJcMlUy8AGu5yTvx-1hHxKjWKWk/edit?usp=sharing"
+              target="_blank">Resume</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -143,35 +143,41 @@
 
         <div class="centering row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
-            <a href="https://memory-match.jerry-ong.com" target="_blank">
               <div class="icon-box icon-box-pink">
                 <img src="assets/img/memorymatch.png" heights="240px" width="200px">
                 <h4 class="title">MTG Memory Match</h4>
                 <p class="description">Magic: The Gathering themed memory matching game</p>
-            </a>
+                <div class="topMargin d-flex justify-content-around">
+            <a href="https://github.com/jerryong89/MTG_Memory_Match" target="_blank"><img src="assets/img/icons8-github.svg" height="50px" width="50px"></a>
+            <a href="https://memory-match.jerry-ong.com" target="_blank"><img src="assets/img/livelink.svg" height="50px"
+                width="50px"></a>
+                </div>
           </div>
-
         </div>
 
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://wicked-sales.jerry-ong.com" target="_blank">
             <div class="icon-box icon-box-cyan">
               <img src="assets/img/wickedsales.png" heights="240px" width="200px">
               <h4 class="title">Send It Sales</h4>
               <p class="description">A mock-up CRUD webpage selling bouldering equipment</p>
-          </a>
+          <div class="topMargin d-flex justify-content-around">
+          <a href="https://github.com/jerryong89/wicked-sales-js" target="_blank"><img src="assets/img/icons8-github.svg" height="50px" width="50px"></a>
+          <a href="https://wicked-sales.jerry-ong.com" target="_blank"><img src="assets/img/livelink.svg"height="50px" width="50px"></a>
+          </div>
         </div>
-
       </div>
 
       <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-        <a href="https://roommates.jerry-ong.com" target="_blank">
           <div class="icon-box icon-box-green">
             <img src="assets/img/roommates.png" heights="240px" width="200px">
             <h4 class="title">Roommates</h4>
-            <p class="description">A web application that helps roommates share and organize space in theirrefrigerator
+            <p class="description">An application that helps roommates share and organize their refrigerator
             </p>
-        </a>
+            <div class="topMargin d-flex justify-content-around">
+        <a href="https://github.com/jerryong89/refridgerator" target="_blank"><img src="assets/img/icons8-github.svg" height="50px" width="50px"></a>
+        <a href="https://roommates.jerry-ong.com" target="_blank"><img src="assets/img/livelink.svg" height="50px"
+            width="50px"></a>
+            </div>
       </div>
     </section><!-- End Services Section -->
 
