--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a href="#portfolio">Skills</a></li>
           <li><a href="#team">Tools</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="https://docs.google.com/document/d/1ij1jHo_l1aoOZlSWrJcMlUy8AGu5yTvx-1hHxKjWKWk/edit?usp=sharing"
+          <li><a href="https://drive.google.com/file/d/1qb0CfsgoiDdsbjMHgEmZrIOL9Urb3WIr/view?usp=sharing"
               target="_blank">Resume</a></li>
         </ul>
       </nav><!-- .nav-menu -->
