--- a/index.html
+++ b/index.html
@@ -366,6 +366,27 @@
                       <img src="assets/img/slack.svg" height="100px" width="100px">
                     </div>
                   </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Docker</h4>
+                    <div class="center">
+                      <img src="assets/img/docker.svg" height="140px" width="140px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Adobe Lightroom</h4>
+                    <div class="center lightroom">
+                      <img src="assets/img/lightroom.svg" height="190px" width="190px">
+                    </div>
+                  </div>
+
+                  <div class="col-lg-4 col-md-6 content-item" data-aos="fade-in" data-aos-delay="500">
+                    <h4>Adobe Photoshop</h4>
+                    <div class="center photoshop">
+                      <img src="assets/img/photoshop.svg" height="80px" width="80px">
+                    </div>
+                  </div>
                 </div>
 
               </div>
