finished dashboard in project section

--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up"
             data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
-              <img src="assets/img/wickedsales.png" heights="240px" width="200px">
-              <h4 class="title">Send It Sales</h4>
-              <p class="description">A mock-up CRUD webpage selling bouldering equipment</p>
+              <img src="assets/img/dashboard.png" heights="240px" width="200px">
+              <h4 class="title">Pointless Dashboard</h4>
+              <p class="description">A dashboard combining IP API and other APIs using GraphQL</p>
               <div class="lightgrey"></div>
               <div class="topMargin d-flex justify-content-around">
-                <a href="https://github.com/jerryong89/wicked-sales-js" target="_blank"><img
+                <a href="https://github.com/jerryong89/graphQL-hackathon2" target="_blank"><img
                     src="assets/img/icons8-github.svg" height="50px" width="50px"></a>
                     <div class="vl"></div>
-                <a href="https://wicked-sales.jerry-ong.com" target="_blank"><img src="assets/img/livelink.svg"
+                <a href="https://jerryong89.github.io/graphQL-hackathon2/" target="_blank"><img src="assets/img/livelink.svg"
                     height="50px" width="50px"></a>
               </div>
             </div>
